--- a/students/css/student.css
+++ b/students/css/student.css
@@ -161,13 +161,20 @@ section {
 
 .subject {
     display: flex;
-    height: 30px;
+    width: 100%;
 }
 
 .subject p {
-    width: 50%;
+    width: 100%;
     height: 100%;
     font-weight: bold;
+}
+
+#editGrade {
+    border: 0;
+    border-radius: 0;
+    background: none;
+    color: black;
 }
 
 #myTab {
@@ -225,6 +232,10 @@ section {
     border: solid 1px #DEE2E6;
     border-radius: 0px 0px 10px 10px;
     overflow: scroll;
+}
+
+.abc {
+    display: flex;
 }
 
 table {
@@ -346,6 +357,7 @@ tr {
     }
     .subject,
     #myTab {
+        display: grid;
         justify-content: center;
         text-align: center;
         margin-bottom: 5%;
